--- a/solution/client/src/components/AviaSearch/AviaSearchFlight/aviaSearchFlight.scss
+++ b/solution/client/src/components/AviaSearch/AviaSearchFlight/aviaSearchFlight.scss
@@ -43,13 +43,13 @@
         margin-left: 10px;
         padding: 5px 0 4px;
         color: #fff;
-        font-size: 20px;
+        font-size: mrem(20);
       }
     }
 
     &-company {
       font-weight: bold;
-      font-size: 16px;
+      font-size: mrem(16);
 
     }
 
@@ -60,12 +60,12 @@
       text-align: right;
 
       &-label {
-        font-size: 18px;
+        font-size: mrem(18);
 
       }
 
       &-note {
-        font-size: 10px;
+        font-size: mrem(10);
       }
     }
 
@@ -75,7 +75,7 @@
       padding: 0 0 5px 10px;
       border-bottom: 1px #A2A2A2 solid;
       color: #555;
-      font-size: 17px;
+      font-size: mrem(17);
 
       &-departure, &-arrival {
         margin-right: 10px;
@@ -85,7 +85,7 @@
       &-arrow {
         margin-right: 10px;
         color: #999;
-        font-size: 16px;
+        font-size: mrem(16);
       }
     }
 
@@ -109,14 +109,14 @@
         gap: 5px;
         color: #555;
         font-weight: 500;
-        font-size: 17px;
+        font-size: mrem(17);
         text-align: center;
       }
 
       &-date {
         margin-top: 2px;
         color: $avia-blue;
-        font-size: 14px;
+        font-size: mrem(14);
       }
 
       &-total {
@@ -154,11 +154,33 @@
       display: inline-block;
       padding: 5px 0 5px 10px;
       color: #555;
-      font-size: 16px;
+      font-size: mrem(16);
 
     }
 
   }
 
 }
-
+@media screen and (max-width: 768px) {
+  .avia-search {
+    &__flight {
+      &-times-count {
+        &::before, &:after {
+          display: none;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 430px) {
+  .avia-search {
+    &__flight {
+      &-times-list {
+        padding-left: 0;
+      }
+      &-times-count::before, &-times-count::after {
+      display: none;
+      }
+    }
+  }
+}
