--- a/solution/client/src/components/AviaSearch/AviaSearchMain/aviaSearchMain.scss
+++ b/solution/client/src/components/AviaSearch/AviaSearchMain/aviaSearchMain.scss
@@ -1,3 +1,5 @@
+@import "../../../scss/mixins";
+
 .avia-search {
   &__wrapper {
     display: flex;
@@ -14,7 +16,7 @@
     padding: 10px 20px;
     border: none;
     border-radius: 0 0 10px 10px;
-    background-color: $avia-orange;
+    background-color: #FF8E1D;
     color: #fff;
     font-weight: bold;
     font-size: 14px;
@@ -34,7 +36,7 @@
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
-    background-color: $avia-blue;
+    background-color: #1987C9;
     color: #fff;
     font-weight: bold;
     font-size: 14px;
